add initial styling

--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo-App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1>Todo App</h1>
   <div class="wrapper">
-    <form>
-      <input id="todo-input" type="text" placeholder="write something" autocomplete="off">
-      <button id="add-button">Add</button>
-    </form>
+    <div id="header">
+      <form>
+        <input id="todo-input" type="text" placeholder="write something" autocomplete="off">
+        <button id="add-button">Add</button>
+      </form>
+      <select id="todo-select">
+        <option value="completed">Completed</option>
+        <option value="completed">Uncompleted</option>
+      </select>
+    </div>
     <ul id="todo-list">
       <li class="todo">
         <input type="checkbox" id="todo-1">
@@ -23,7 +30,19 @@
         <label for="todo-2" class="todo-text">
           some text
         </label>
-        <button class="delete-button">Delete button</button>
+        <button class="edit-button">Edit</button>
+        <button class="delete-button">Delete</button>
+      </li>
+      <li class="todo">
+        <input type="checkbox" id="todo-3">
+        <label class="custom-checkbox" for="todo-3">
+          
+        </label>
+        <label for="todo-4" class="todo-text">
+          some text
+        </label>
+        <button class="edit-button">Edit</button>
+        <button class="delete-button">Delete</button>
       </li>
     </ul>
   </div>
