--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo-App</title>
     <link rel="stylesheet" href="style.css">
-    <script src="todo.js" defer></script>
+    <script src="src/todo.js" defer></script>
 </head>
 
 <body>
