--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo-App</title>
     <link rel="stylesheet" href="style.css">
-    <script src="src/todo.js" defer></script>
 </head>
 
 <body>
@@ -27,6 +26,7 @@
       </form>
     <ul id="todo-list">
     </ul>
+    <script type="module" src="./dist/todo.js"></script>
   </div>
 </body>
 
