--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </form>
     <ul id="todo-list">
     </ul>
-    <script type="module" src="./dist/todo.js"></script>
+    <script type="module" src="./dist/index.js"></script>
   </div>
 </body>
 
