--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="wrapper">
       <form>
         <div class="inputs-container">
-          <input id="todo-input" type="text" placeholder="write something" autocomplete="off">
+          <input id="todo-input" type="text" placeholder="Please, add your new todo" autocomplete="off">
           <button id="add-button">Add</button>
         </div>
           <div class="select-container">
